Completed the bag panel, fixed some bugs with items and focus